--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Quiz</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
   <main class="app" role="main" aria-labelledby="app-title">
@@ -80,6 +80,6 @@
     </footer>
   </main>
 
-  <script src="script.js" type="module"></script>
+  <script src="src/script.js" type="module"></script>
 </body>
 </html>
